[package]
name = "unicorn_hat_hd"
version = "0.2.1"
authors = ["Jacob Helwig <jacob@technosorcery.net>"]
description = "Provides an interface to the Pimoroni Unicorn HAT HD on a Raspberry PI"
repository = "https://github.com/jhelwig/unicorn-hat-hd-rs"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["pimoroni"]
categories = ["hardware-support"]
exclude = [
    ".vscode/*",
]

[features]
default = ["hardware"]
hardware = ["spidev"]
fake-hardware = ["ansi_term"]

[dependencies]
ansi_term = { version = "0.11.0", optional = true }
failure = "0.1.1"
rgb = "0.8"
spidev = { version = "0.3.0", optional = true }
